List-group, Header: fix z-index

--- a/template/modern/css/default.css
+++ b/template/modern/css/default.css
@@ -599,7 +599,7 @@ a:hover{
 /**********************************************************************************************************************/
 
 .navbar-eclass{
-  z-index:9999;
+  z-index:4;
 }
 
 /* textEditor */
