--- a/template/modern/css/sidebar.css
+++ b/template/modern/css/sidebar.css
@@ -41,6 +41,7 @@
 .contextual-sidebar .list-group-item.active{
   background-color: #EFF6FF;
   color: #0073E6;
+  z-index: 0;
 }
 
 
